<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/store"
            android:title="@string/menu_store" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/user"
            android:title="@string/menu_user" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/order"
            android:textColor="@color/white"
            android:title="@string/menu_order" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/payment"
            android:title="@string/menu_payment" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>
</menu>